[package]
name = "nss-docker"
version = "0.1.0"
edition = "2021"

[dependencies]
isahc = { version = "1", default-features = false, features = ["json"] }
lazy_static = "1"
libc = "0.2"
libnss = "0.4"
once_cell = "1"
paste = "1"
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ['cdylib']

[profile.release]
lto = "thin"
panic = "abort"
strip = "debuginfo"

[profile.bench]
lto = "thin"
