[package]
name = "nss-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
isahc = { version = "1", default-features = false, features = ["json"] }
libc = "0.2"
libnss = "0.9"
once_cell = "1"
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ['cdylib']

[profile.release]
lto = "thin"
panic = "abort"
strip = "debuginfo"

[lints.clippy]
nursery = "warn"
pedantic = "warn"
dbg_macro = "warn"
float_cmp_const = "warn"
multiple_inherent_impl = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
